<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMIapp</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="edtLogin_hint">Type your login</string>
    <string name="password">Password</string>
    <string name="edtPassword_hint">Type your password</string>
    <string name="save">Save</string>
    <string name="saveLogin">Save login</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="server_address">Server address</string>
    <string name="server_address_hint">http://server.address.com</string>
    <string name="restore_default_server_address">Restore default server</string>
    <string name="restore_default_server_link"><a href="http://www.restoreserver.com">Restore default server</a></string>
    <string name="msg_io_error">Input or output Error</string>
    <string name="msg_no_connection">No connection</string>
    <string name="msg_unsuccessful_connection">Unsuccessful connection</string>
    <string name="msg_could_not_connect_to_server">Could not connect to server!</string>
    <string name="msg_required_field">Required field</string>
    <string name="evaluate_medical">Evaluate medical</string>
    <string name="schedule_an_appointment">Schedule an appointment</string>
    <string name="cancel_scheduling">Cancel scheduling</string>
    <string name="consult_doctor">Seek doctor</string>
    <string name="consult_clinic">Consult clinic</string>
    <string name="historical_consulting_service">Historical consulting service</string>
    <string name="record_attendance">Record attendance</string>
    <string name="connected">Connected</string>
    <string name="msg_invalid_user">Invalid user</string>
    <string name="msg_invalid_password">Invalid password</string>
    <string name="msg_Invalid_login_or_password">Invalid login or password</string>
    <string name="msg_acess_denied">Acess denaied</string>
    <string name="msg_server_error">Internal server error</string>
    <string name="msg_resource_not_found">The requested resource was not found on the server.</string>
    <string name="title_activity_buscar_medico">Seek Doctor</string>
    <string name="specialty">Specialty</string>
    <string name="doctor">Doctor</string>
    <string name="clinic">Clinic</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="filters">Filters</string>
    <string name="doctor_name">Doctor\'s name</string>
    <string name="doctor_name_p">Doctor\'s name:</string>
    <string name="type_part_of_the_name">Type part of the name</string>
    <string name="clinic_name">Clinic name</string>
    <string name="type_part_of_the_name_of_the_clinic">Type part of the name of the clinic</string>
    <string name="seek">Seek</string>
    <string name="clear">Clear</string>
    <string name="title_activity_lista__medicos">Seek doctor</string>
    <string name="hello_world">Hello world!</string>
    <string name="state_city">State/City</string>
    <string name="filters_used_in_the_search">Filters used in the search</string>
    <string name="crm">Record</string>
    <string name="msg_no_doctor_found">No doctor found!</string>
    <string name="msg_no_record_found">No record found!</string>
    <string name="health_plan">Health plan</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday_abbreviated">Sun</string>
    <string name="day_monday_abbreviated">Mon</string>
    <string name="day_tuesday_abbreviated">Tue</string>
    <string name="day_wednesday_abbreviated">Wed</string>
    <string name="day_thursday_abbreviated">Thu</string>
    <string name="day_friday_abbreviated">Fri</string>
    <string name="day_saturday_abbreviated">Sat</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
 	<string name="june">June</string>
 	<string name="july">July</string>
	<string name="august">August</string>
	<string name="september">September</string>
 	<string name="october">October</string>
 	<string name="november">November</string>
 	<string name="december">December</string>
 	<string name="vacancy_exists">"Vacancy exists "</string>
 	<string name="there_is_an_appointment">There is an appointment.</string>
 	<string name="there_are_vague">"There are vague. "</string>
 	<string name="time_at">at</string>
 	<string name="marck">Marck</string>
 	<string name="msg_scheduling_successful">Scheduling successful.</string>
 	<string name="all_male">All</string>
 	<string name="all_female">All</string>
 	<string name="search_for_scheduled_appointments">Search for scheduled appointments.</string>
 	<string name="search">Search</string>
 	<string name="doctor_p">Doctor:</string>
 	<string name="date_p">Date:</string>
 	<string name="status_p">Status:</string>
 	<string name="schedule_p">Schedule:</string>
 	<string name="status_scheduled">Scheduled</string>
 	<string name="status_service_provided">Service provided</string>
 	<string name="status_schedule_canceled">Canceled</string>
 	<string name="day_p">Day:</string>
 	<string name="month_p">Month:</string>
 	<string name="year_p">Year:</string>
 	<string name="msg_no_scheduled_appointments_found">No scheduled appointments foud.</string>
 	<string name="change_password">Change password</string>
 	<string name="msg_server_time_out">Exceeded time limit for response</string>
 	<string name="cancel_as_link"><a href="http://www.cmi.com.br/cancel-command">Cancel</a></string>
 	<string name="msg_confirm_cancel">Want to cancel the query? This action can not be undone. Want to continue?</string>
 	<string name="yes">Yes</string>
 	<string name="no">No</string>
 	<string name="dlg_title_confirmation">Confirm</string>
 	<string name="msg_cancellation_done">Cancellation done.</string>
 	<string name="msg_no_content">The server received the request but did not send response message.</string>
 	<string name="msg_evaluation_performed">Evaluation performed.</string>
 	<string name="commetary">Commentary</string>
 	<string name="commetary_p">Commentary:</string>
 	<string name="type_your_comment_here">Type your comment here.</string>
 	<string name="evaluate_care">Evaluate care.</string>
 	<string name="msg_enter_stars_first">Enter a number of stars first!</string>
 	<string name="msg_no_service_found">No service found.</string>
 	<string name="new_password">New password</string>
 	<string name="confirm_new_password">Confirme the new password</string>
 	<string name="type_your_new_password">Type your new password</string>
 	<string name="type_your_new_password_again">Type your new password again</string>
 	<string name="msg_successfully_changed_password">Successfully changed password.</string>
 	<string name="business_roles_exception">Business rules exception.</string>
 	<string name="msg_user_password_must_be_5_to_15_characters">The user password must be 5 to 15 characters.</string>

</resources>
