<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiente_verde"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtvLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtLogin_hint"
        android:imeActionLabel="@string/next"
        android:imeOptions="actionNext"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtvPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtPassword_hint"
        android:imeActionId="10"
        android:imeActionLabel="@string/ok"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chkSaveLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveLogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLoginOk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:width="0dp" />

        <Button
            android:id="@+id/btnLoginCancel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:width="0dp" />
    </LinearLayout>

</LinearLayout>