<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiente_verde"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:id="@+id/layout_server_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtServerAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/server_address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtvLoginRestoreDefaultServerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:autoLink="all"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:linksClickable="true"
                android:text="@string/restore_default_server_link" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtServerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/server_address_hint"
            android:imeOptions="actionNext"
        	android:imeActionLabel="@string/next" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtLogin_hint"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:imeActionLabel="@string/next" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtPassword_hint"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/ok" />
    
    <LinearLayout
        android:id="@+id/llNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/txtvNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_your_new_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:imeActionLabel="@string/next" />

        <TextView
            android:id="@+id/txtvConfirmNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edtConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_your_new_password_again"
            android:imeActionLabel="@string/ok"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/chkSaveLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveLogin"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLoginOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_ok_button"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/abc_ic_cab_done_holo_dark"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/abc_ic_cab_done_holo_dark"
            android:width="0dp" />

        <Button
            android:id="@+id/btnLoginCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_cancel_button"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/abc_ic_clear_normal"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/abc_ic_clear_normal"
            android:width="0dp" />
        
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:progress="10"
        android:visibility="invisible" />

</LinearLayout>
