<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiente_verde"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.android.cmi.cmiapp.BuscarMedicoActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtStateFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state" />

                    <Spinner
                        android:id="@+id/spnStateFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtCityFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city" />

                    <Spinner
                        android:id="@+id/spnCityFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtSpecialtyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialty" />

            <Spinner
                android:id="@+id/spnSpecialtyFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtHealthPlanFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_plan" />

            <Spinner
                android:id="@+id/spnHealthPlanFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDoctorNameFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name" />

            <EditText
                android:id="@+id/edtDoctorNameFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_part_of_the_name"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/txtClinicalNameFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clinic_name" />

            <EditText
                android:id="@+id/edtClinicNameFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/type_part_of_the_name"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>
    
    <ProgressBar
        android:id="@+id/progressBarSearchDoctor"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="10"
        android:visibility="gone" />

</LinearLayout>