<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp" >
    
    <ProgressBar
        android:id="@+id/progressBar_avaliacaoAtendimento"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/ratingBar_avaliacaoAtendimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="5"
        android:numStars="5"
        android:rating="2"
        android:stepSize="1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commetary_p"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edtComentario_AvaliacaoAtendimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_your_comment_here"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/ok" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOk_avaliacaoAtendimento"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_ok_button"
            android:contentDescription="@string/ok"
            android:drawableLeft="@drawable/abc_ic_cab_done_holo_dark"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/abc_ic_cab_done_holo_dark"
            android:enabled="false"
            android:text="@string/ok"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancelar_avaliacaoAtendimento"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_cancel_button"
            android:contentDescription="@string/cancel"
            android:drawableLeft="@drawable/abc_ic_clear_normal"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/abc_ic_clear_normal"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
