<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiente_prata"
    android:orientation="vertical" >


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradiente_azul" >

        <RelativeLayout
            android:id="@+id/previous"
            android:layout_width="40dip"
            android:layout_height="30dip" >

            <TextView
                android:id="@+id/txtPreviousMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="&lt;"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtMonthAndYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dip"
            android:text="@null"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/next"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/txtNextMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=">"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradiente_azul" >

        <TextView
            android:id="@+id/txtDomingo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sunday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSegunda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_monday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTerca"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_tuesday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtQuarta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_wednesday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtQuinta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_thursday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSexta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_friday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSabado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_saturday_abbreviated"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <GridView
        android:id="@+id/grdvAgenda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth" />
    
    <ProgressBar
        android:id="@+id/progressBar_agenda"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtMedico_agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="@color/green_600"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtClinica_agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="@color/green_600"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtEspecialidades_agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textColor="@color/green_600"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/lnltExisteVagas_agenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_gradiente_verde"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/txtvExisteVaga_agenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/there_are_vague"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnltExisteConultaMarcada_agenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_gradiente_azul"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/txtvExisteConsultaMarcada_agenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/there_is_an_appointment"
                android:textColor="@color/blue_deep" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/rbtnHora1_agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rbtnHora2_agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:visibility="gone" />
    </LinearLayout>
    
    

</LinearLayout>